# mlx-lm-playground

./: .python-version  README.md  acceptance_criteria.json  detailed_requirements.txt  mlxchat.py  pyproject.toml  requirements.txt  simple-chat.py
examples/: run_payment_example.sh
examples/payment_example/: acceptance_criteria.json  requirements.txt
mlxchat/: __init__.py  cli.py  commands.py  config.py  engine.py  memory.py  types.py
mlxchat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
qa_generator/: __init__.py  cli.py  exceptions.py  models.py  runtime.py  simple_mlx_runtime.py  validation.py  workflow.py
qa_generator/nodes/: __init__.py  critic.py  emitter.py  generator.py  parser.py  synthesizer.py
tests/: __init__.py  conftest.py  test_critic.py  test_models.py  test_parser.py  test_zip_luhn_example.py
