[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-qa-generator"
version = "0.1.0"
description = "QA Test Scenario Generator using local MLX models - Transform PRDs into comprehensive test plans"
requires-python = ">=3.11"
dependencies = [
  "mlx",           # MLX core
  "mlx-lm",        # MLX LLM wrapper
  "openai>=1.0.0", # OpenAI client for unified API
  "pydantic>=2.5", # Data validation (v2.5+ for stable field_validator)
  "requests",      # HTTP client
]

[project.scripts]
qa-generator = "qa_generator.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio",
  "pytest-mock", 
  "black",
  "ruff",
  "mypy",
]

[tool.setuptools]
packages = { find = { include = ["qa_generator*"], exclude = ["tests*"] } }

